2009-08-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use explicit width integer types more.

	* lib/include/svp/div.h,
	* lib/include/svp/io.h,
	* lib/include/svp/iomacros.h,
	* lib/src/div.c,
	* lib/src/io.c: Use `int64_t' and `uint64_t' where
	appropriate. Use `long' in a few places to avoid unnecessary
	truncation in code generation.

2009-08-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix to automated test suite.

	* tools/tests/mkalltests.sh,
	* lib/tests/mkalltests.sh: Prevent capturing sources that result
	from previous test runs.

2009-08-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	C-ify test suite in `lib/'.
	
	* lib/tests/div/div.sl,
	* lib/tests/div/div2.sl,
	* lib/tests/div/div3.sl,
	* lib/tests/malloc/m1.sl,
	* lib/tests/malloc/m2.sl,	
	* lib/tests/sac1.sl: Rename to...

	* lib/tests/div/div.c,
	* lib/tests/div/div2.c,
	* lib/tests/div/div3.c,
	* lib/tests/malloc/m1.c,
	* lib/tests/malloc/m2.c,	
	* lib/tests/sac1.c: ... here. Use CPP syntax where appropriate.

	* lib/tests/div/div.c,
	* lib/tests/div/div2.c,
	* lib/tests/div/div3.c: Use types with specific widths.

2009-08-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make Bash 4 happy.

	* tools/lib/r-host.sh,
	* tools/lib/r-mtalpha-sim.sh.in,	
	* tools/lib/r-mtsparc-sim.sh.in: Protect expansions of `$*' and
	`$@' since Bash 4 complains if there are no positional arguments.

2009-08-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify more.
	
	* tools/bin/cce.in: Do not add the default includes to
	`slc_cflags'.

2009-08-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Remove support for compiling `.sl' files.

	* tools/bin/slt.in,
	* tools/bin/slt-many.in,
	* tools/bin/slc.in: Simplify.
	
	* tools/tests/mkalltests.sh,
	* lib/tests/mkalltests.sh: Use `.c' files only.
	
2009-08-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use new header names more.
	
	* tools/include/svp/fibre.h,
	* tools/include/svp/slr.h,
	* tools/lib/arggen.c: Use `.h' instead of `.slh'.
